--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,12 @@
     <string name="text_population">Population: %d</string>
     <string name="text_dash">-</string>
     <string name="text_category">Category</string>
+    <string name="text_infor">Information</string>
+    <string name="text_name">Name:</string>
+    <string name="text_researcher">Researcher/Developer:</string>
+    <string name="text_description">Description:</string>
+    <string name="text_last_update">Last update:</string>
+    <string name="text_vaccine_category">Category:</string>
     <string name="text_clinical_vaccine">1. Pre-Clinical Vaccines</string>
     <string name="text_phase1_vaccine">2. Phase I Vaccines</string>
     <string name="text_phase2_vaccine">3. Phase II Vaccines</string>
